--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -17,11 +17,15 @@
         <item
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_menu_manage"
-            android:title="帮助" />
+            android:title="设置" />
     </group>
 
     <item android:title="Communicate">
         <menu>
+            <item
+                android:id="@+id/help"
+                android:icon="@drawable/ic_menu_slideshow"
+                android:title="帮助"/>
             <item
                 android:id="@+id/nav_share"
                 android:icon="@drawable/ic_menu_share"
