--- a/app/src/main/res/layout/addincome.xml
+++ b/app/src/main/res/layout/addincome.xml
@@ -20,14 +20,14 @@
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/addOutlay_date"
+            android:id="@+id/payment_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="date" />
 
         <EditText
-            android:id="@+id/addOutlay_note"
+            android:id="@+id/payment_note"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -35,12 +35,12 @@
             android:inputType="textMultiLine" />
 
         <Spinner
-            android:id="@+id/addOutlay_type"
+            android:id="@+id/payment_type"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <EditText
-            android:id="@+id/addOutlay_address"
+            android:id="@+id/payment_handler_address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -48,7 +48,7 @@
             android:text="付款方" />
 
         <EditText
-            android:id="@+id/addIncome_money"
+            android:id="@+id/payment_money"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
