--- a/app/src/main/res/layout/addnote_fragment.xml
+++ b/app/src/main/res/layout/addnote_fragment.xml
@@ -5,7 +5,7 @@
     android:weightSum="1">
 
     <EditText
-        android:id="@+id/note_edit"
+        android:id="@+id/flag_edit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.45"
