--- a/app/src/main/res/layout/fragment_note_item.xml
+++ b/app/src/main/res/layout/fragment_note_item.xml
@@ -14,6 +14,8 @@
 
     <MultiAutoCompleteTextView
         android:id="@+id/note_content"
+        android:enabled="false"
+        android:textColor="@color/colorPrimary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="MultiAutoCompleteTextView"
