--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,35 +3,35 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/nav_income"
             android:icon="@drawable/ic_menu_camera"
             android:title="收入" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_outlay"
             android:icon="@drawable/ic_menu_gallery"
             android:title="支出" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_overcome"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="总览" />
         <item
-            android:id="@+id/nav_share"
+            android:id="@+id/nav_note"
             android:icon="@drawable/ic_menu_share"
             android:title="便签" />
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="More">
         <menu>
             <item
-                android:id="@+id/nav_manage"
+                android:id="@+id/nav_settings"
                 android:icon="@drawable/ic_menu_manage"
                 android:title="设置" />
             <item
-                android:id="@+id/help"
+                android:id="@+id/nav_help"
                 android:icon="@drawable/ic_menu_slideshow"
                 android:title="帮助"/>
             <item
-                android:id="@+id/nav_send"
+                android:id="@+id/nav_exit"
                 android:icon="@drawable/ic_menu_send"
                 android:title="退出" />
         </menu>
