--- a/app/src/main/res/layout/addpayment_fragment.xml
+++ b/app/src/main/res/layout/addpayment_fragment.xml
@@ -9,7 +9,7 @@
     tools:layout_editor_absoluteX="0dp">
 
     <EditText
-        android:id="@+id/payment_money"
+        android:id="@+id/update_money"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
@@ -32,11 +32,11 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="16dp"
         android:text="类型"
-        app:layout_constraintRight_toLeftOf="@+id/payment_type"
+        app:layout_constraintRight_toLeftOf="@+id/update_type"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
-        android:id="@+id/payment_type"
+        android:id="@+id/update_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:layout_conversion_absoluteHeight="24dp"
@@ -45,14 +45,14 @@
         tools:layout_conversion_absoluteY="141dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/payment_money"
+        app:layout_constraintBottom_toBottomOf="@+id/update_money"
         android:layout_marginBottom="8dp"
         android:layout_marginRight="8dp"
         app:layout_constraintVertical_bias="0.454"
         app:layout_constraintRight_toRightOf="parent" />
 
     <EditText
-        android:id="@+id/payment_handler_address"
+        android:id="@+id/update_handler_address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
@@ -61,7 +61,7 @@
         android:hint="付款方"
         android:inputType="textPersonName"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/payment_money"
+        app:layout_constraintTop_toBottomOf="@+id/update_money"
         tools:layout_conversion_absoluteHeight="42dp"
         tools:layout_conversion_absoluteWidth="360dp"
         tools:layout_conversion_absoluteX="0dp"
@@ -73,9 +73,9 @@
         android:layout_height="wrap_content"
         app:srcCompat="@android:drawable/ic_menu_my_calendar"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/payment_note"
+        app:layout_constraintTop_toBottomOf="@+id/update_note"
         android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="@+id/payment_type" />
+        app:layout_constraintRight_toRightOf="@+id/update_type" />
 
     <TextView
         android:id="@+id/payment_date"
@@ -93,10 +93,10 @@
         android:layout_marginLeft="24dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@+id/payment_note" />
+        app:layout_constraintTop_toBottomOf="@+id/update_note" />
 
     <EditText
-        android:id="@+id/payment_note"
+        android:id="@+id/update_note"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -110,7 +110,7 @@
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/payment_handler_address" />
+        app:layout_constraintTop_toBottomOf="@+id/update_handler_address" />
 
 
 </android.support.constraint.ConstraintLayout>
