--- a/app/src/main/res/layout/constrain_payment_item.xml
+++ b/app/src/main/res/layout/constrain_payment_item.xml
@@ -19,7 +19,7 @@
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
-        android:id="@+id/payment_money"
+        android:id="@+id/update_money"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
@@ -30,7 +30,7 @@
         android:layout_marginLeft="8dp" />
 
     <TextView
-        android:id="@+id/payment_handler_address"
+        android:id="@+id/update_handler_address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -38,8 +38,8 @@
         android:layout_marginRight="8dp"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/payment_note"
-        app:layout_constraintRight_toLeftOf="@+id/payment_type" />
+        app:layout_constraintLeft_toRightOf="@+id/update_note"
+        app:layout_constraintRight_toLeftOf="@+id/update_type" />
 
     <TextView
         android:id="@+id/payment_date"
@@ -53,7 +53,7 @@
         app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
-        android:id="@+id/payment_type"
+        android:id="@+id/update_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
@@ -63,7 +63,7 @@
         app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
-        android:id="@+id/payment_note"
+        android:id="@+id/update_note"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
