--- a/app/src/main/res/layout/fragemnt_chart.xml
+++ b/app/src/main/res/layout/fragemnt_chart.xml
@@ -3,9 +3,9 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/textView"
+    <com.github.mikephil.charting.charts.BarChart
+        android:id="@+id/chart"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Button" />
+        android:layout_height="match_parent" />
+
 </LinearLayout>
