--- a/app/src/main/res/layout/update_dialog.xml
+++ b/app/src/main/res/layout/update_dialog.xml
@@ -9,51 +9,31 @@
     tools:layout_editor_absoluteX="0dp">
 
     <EditText
-        android:id="@+id/payment_date"
+        android:id="@+id/update_money"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="时间"
-        android:inputType="date"
+        android:hint="金额"
+        android:inputType="numberDecimal"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintTop_toTopOf="parent"
         tools:layout_conversion_absoluteHeight="42dp"
         tools:layout_conversion_absoluteWidth="360dp"
         tools:layout_conversion_absoluteX="0dp"
-        tools:layout_conversion_absoluteY="56dp" />
-
-    <EditText
-        android:id="@+id/update_note"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="备注"
-        android:inputType="textMultiLine"
-        tools:layout_conversion_absoluteHeight="42dp"
-        tools:layout_conversion_absoluteWidth="360dp"
-        tools:layout_conversion_absoluteX="0dp"
-        tools:layout_conversion_absoluteY="98dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/update_date"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="8dp" />
+        tools:layout_conversion_absoluteY="208dp" />
 
     <TextView
-        android:id="@+id/outlay_hint"
+        android:id="@+id/update_hint"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:text="类型"
-        app:layout_constraintBottom_toBottomOf="@+id/update_type"
         app:layout_constraintRight_toLeftOf="@+id/update_type"
-        app:layout_constraintTop_toTopOf="@+id/update_note" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
         android:id="@+id/update_type"
@@ -63,10 +43,13 @@
         tools:layout_conversion_absoluteWidth="360dp"
         tools:layout_conversion_absoluteX="0dp"
         tools:layout_conversion_absoluteY="141dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/update_money"
+        android:layout_marginBottom="8dp"
         android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/update_note"
-        android:layout_marginTop="8dp" />
+        app:layout_constraintVertical_bias="0.454"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <EditText
         android:id="@+id/update_handler_address"
@@ -75,30 +58,59 @@
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
+        android:hint="付款方"
         android:inputType="textPersonName"
-        android:text="地点"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/update_note"
+        app:layout_constraintTop_toBottomOf="@+id/update_money"
         tools:layout_conversion_absoluteHeight="42dp"
         tools:layout_conversion_absoluteWidth="360dp"
         tools:layout_conversion_absoluteX="0dp"
         tools:layout_conversion_absoluteY="165dp" />
 
-    <EditText
-        android:id="@+id/addOutlay_money"
+    <ImageButton
+        android:id="@+id/update_ok"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="9dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintRight_toRightOf="@+id/update_type"
+        app:layout_constraintTop_toBottomOf="@+id/update_note"
+        app:srcCompat="@android:drawable/ic_menu_save" />
+
+    <TextView
+        android:id="@+id/update_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="金额"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/update_handler_address"
+        android:hint="日期"
+        android:inputType="none"
+        android:text="日期"
         tools:layout_conversion_absoluteHeight="42dp"
         tools:layout_conversion_absoluteWidth="360dp"
         tools:layout_conversion_absoluteX="0dp"
-        tools:layout_conversion_absoluteY="208dp" />
+        tools:layout_conversion_absoluteY="56dp"
+        android:layout_marginLeft="24dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@+id/update_note" />
+
+    <EditText
+        android:id="@+id/update_note"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:ems="10"
+        android:hint="备注"
+        android:inputType="textMultiLine"
+        tools:layout_conversion_absoluteHeight="42dp"
+        tools:layout_conversion_absoluteWidth="360dp"
+        tools:layout_conversion_absoluteX="0dp"
+        tools:layout_conversion_absoluteY="98dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/update_handler_address" />
 
 
 </android.support.constraint.ConstraintLayout>
