--- a/app/src/main/res/layout/addpayment_fragment.xml
+++ b/app/src/main/res/layout/addpayment_fragment.xml
@@ -58,7 +58,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="付款方"
+        android:hint="付款方/地址"
         android:inputType="textPersonName"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/update_money"
